PUBDEV-8075: Added schema skeleton PUBDEV-8075: Added INFOGRAMOutputV99 PUBDEV-8075: enable user to specify algorithm specific algorithm PUBDEV-8075: Added parameter parallelism PUBDEV-8075: Added Junit test PUBDEV-8075: added topk parameters PUBDEV-8075: add topk into schema PUBDEV-8075: completed infogram and fixed all leaks PUBDEV-8075: Fixed stopping_tolerance to generate same result as Deep PUBDEV-8075: Fixed all five tests from deep PUBDEV-8075: add two new examples from Deep to infogram test. PUBDEV-8075: Present infogram with ordered features according to how close they are to the (1,1) coordinate. PUBDEV-8075: Moved infogram from h2o-algos to h2o-admissibleml PUBDEV-8075: Admissible attributes returned as H2OFrame will have relevance first, then CMI or safety index. PUBDEV-8075: add InfoGram Rest end point like xgboost PUBDEV-8075: Switched admissible attributes frame order per Erin requests PUBDEV-8075: Added custom gen_infogram.py for R and Python PUBDEV-8075: generated R and Python APIs PUBDEV-8075: Add algo xgboost for infogram PUBDEV-8075: add cmi/relevance of all predictors, not just admissible predictors PUBDEV-8075: add python api to extract predictor cmi/relevance and admissible cmi/relevance. PUBDEV-8075: Done with python API and tests PUBDEV-8075: Done adding R API and tests.

--- a/h2o-r/h2o-DESCRIPTION.template
+++ b/h2o-r/h2o-DESCRIPTION.template
@@ -89,6 +89,7 @@ Collate:
          'coxphutils.R'
          'kmeans.R'
          'gam.R'
+         'infogram.R'
          'gbm.R'
          'generic.R'
          'glm.R'
